hard-gists/9747287/run.log
=== Docker Run Log for 9747287 ===
Started at: Mi 29. Okt 18:31:38 CET 2025

[2025-10-29 18:31:39] START: Running container for 9747287
[2025-10-29 18:31:39] SUCCESS: Container 0b47a8f53d018da9315f780077c8bba5591a16904a133985b6f49034f8067b63 started for 9747287
=== Container logs for 9747287 ===
  File "/snippet.py", line 126
    print '%s/%s correct' % (nr_correct, len(dataset))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9747287 ===
[2025-10-29 18:31:41] INFO: Container 0b47a8f53d018da9315f780077c8bba5591a16904a133985b6f49034f8067b63 has stopped
